--- a/src/components/sections/Skills.module.css
+++ b/src/components/sections/Skills.module.css
@@ -11,6 +11,7 @@
   margin-top: 46px;
   margin-bottom: 75px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0.25, 0.25));
+  transition: all 0.3s;
 }
 
 .skills h1 {
@@ -20,4 +21,8 @@
 
 .skills p {
   font-size: 29px;
+}
+
+.skills img:hover {
+  transform: scale(1.1);
 }
